Changelog
=========

4.0-dev - (unreleased)
----------------------
* Change: Included ManagementPlan Field and Widget from eea.forms instead of eea.dataservice [szabozo0 #4423]

* TODO: there are a lot of issues to complete the migration, search for "plone4"

* Bug fix: fix swf upload, flash view

* Change: Rename FlashFile to Animation (swf) [szabozo0 #4379]

* Feature: Added upgrade steps
  [voineali #4392]

* Feature: migrated to Plone 4.0.4
  [tiberich #4277]


2.29-dev - (unreleased)
-----------------------
 * Bug fix: fixed "send as notification" [ghicaale]

2.28 - (2011-04-20)
-------------------
 * Bug fix: Change schema extension to adapt IVideoEnhanced instead of IBaseContent [szabozo0 #4260]

2.27 - (2011-04-19)
-------------------
 * Feature: Extend schema with location field [szabozo0 #4260]
 * Bug fix: Added migration fix script for images and files positions in parents [tiberich #4135]

2.26 - (2011-04-07)
-------------------
 * Bug fix: Fixed staff list [ghicaale #4237]

2.25 - (2011-04-01)
-------------------
 * Cleanup: Removed PloneRSSPortlet [voineali #4169]
 * Feature: added rss feeds adaptor for ATFolders [ichimdav #4202]
 * Change: Updated FlashFile file field to blob and added migration script
   for it. See Upgrade steps bellow [voineali #4200]
 * Change: Updated ExternalHighlight image field to blob and added migration
   script for it. See Upgrade steps bellow [voineali #4200]
 * Bug fix: Refactoring Organisation BrowserView adapter as having logic in
   __init__ can break other packages while using queryMultiAdapter [voineali #4196]
 * Cleanup: of pyflakes compiler errors [ichimdav #4141]
 * Cleanup: of pylint violations [ichimdav #4140]
 * Cleanup: Removed .mo file as they are auto-generated now [voineali #4139]
 * Cleanup: Removed portal_migration scripts as portal_migration is deprecated.
   Please check that there are no un-applied migration scripts before
   upgrading to this version [voineali #4139]