@@ -3,6 +3,8 @@ Changelog
 
 4.0-dev - (unreleased)
 ----------------------
+* Bug fix: Fixed Tooltip for Article and Highlight. Don't forget to reimport the profile [szabozo0 #4431]
+
 * Change: Included ManagementPlan Field and Widget from eea.forms instead of eea.dataservice [szabozo0 #4423]
 
 * TODO: there are a lot of issues to complete the migration, search for "plone4"
